fixed overflow on nav

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ h1 {
 
 .mobile-menu a {
     color: #FFFFFF;
+    overflow: hidden;
 }
 
 .mobile-menu .mobile-menu-inner {
